--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@
                 3.  The story must be in Markdown format and include a suitable title.
                 4.  Do not include any "Image Suggestion:" line at the end of your response.
                 5.  Keep the context as a story on the book, good reading, without explicitly using "What?", "Where?", "When?", "Who?", "Why?", and "How?" as section headers or direct questions within the narrative. Instead, weave the answers to these questions naturally into the story's flow.
-                6.  Format the text as the book content, beware to remove all \`\`\` symbol on the context and word 'markdown' next to it
+                6.  Format the text as the book content, beware to remove all \` (backward) symbols on the context and word 'markdown' next to it
                 If you cannot find specific historical information for "${determinedLocation}", try to find information for the broader context (e.g., town/city or region it belongs to), clearly stating this in the story. If no relevant historical information can be reasonably found, respond with a polite message in Markdown.
                                 `;
 
